fixed flex items to wrap based on page size

--- a/main.css
+++ b/main.css
@@ -3,9 +3,12 @@ body{
 font-family: Arial, Helvetica, sans-serif;
 
 }
-
+.container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 .card {
-    
     width: 300px;
     margin: 50px;
     float: left;
@@ -49,3 +52,7 @@ ul{
     font-weight: bold;
 }
 
+.card.img{
+    margin-right:auto;
+    margin-left: auto;
+}
